[workspace]
members = [
    "./packages/vex-sdk",
    "./packages/vex-sdk-jumptable",
    "./packages/vex-sdk-mock"
]
exclude = [
    "./packages/vex-sdk-build",
]
resolver = "3"

[workspace.dependencies]
vex-sdk = { version = "0.27.1", path = "packages/vex-sdk" }
vex-sdk-jumptable = { version = "0.0.2", path = "packages/vex-sdk-jumptable" }
vex-sdk-mock = { version = "0.0.1", path = "packages/vex-sdk-mock" }
